@@ -1,0 +1,7 @@
+Testname: scripts-exec
+Sequence: 6000
+Version: 1.0
+Description: Check for exec bit related issues for scripts
+Test-For:
+ executable-not-elf-or-script
+ script-not-executable
